= 2.1.0 =

- Added obsidian arrows 
- Aim resets to the center of the screens after 15 seconds of not shooting

= 2.0.0 =

Initial release