@@ -1,11 +1,11 @@
 # Bullseye
 A Vintage Story mod aiming to overhaul and rebalance ranged weapons in a vanilla-friendly way.
 
-* A completely new, more engaging aiming system
+* A new aiming system, relying on player input rather than randomness
 * A specific role and handling for each bow
-* Iron and steel spears, casting spearheads from molten metal
-* Comprehensive rebalance to make each weapon relevant without dominating
-* Throw your spears with a running start to make them go farther!
+* Obsidian and bamboo arrows, iron and steel spears, spear head clay molds
+* Broad rebalance - higher damage for spears and arrows, decreased arrow break chance, spear durability higher in melee and lower when throwing, and more
+* Other minor features (throw your spears with a running start to make them go farther!)
 
 For a more information on the changes, [you can check out the project's wiki](https://github.com/Rahjital/VSBullseye/wiki).
 
